<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="leeco_settings_title">LeEco Settings</string>
    <string name="leeco_settings_summary">Device specific settings</string>

    <!-- Ambient display -->
    <string name="display_title">Display</string>
    <string name="system_title">System</string>
    <string name="device_doze_title">Ambient display</string>

    <string name="qc_title">Quick Charge</string>
    <string name="qc_summary">Enable/disable quick charge settings</string>

    <string name="camera_focus_fix_title">Autofocus Fix</string>
    <string name="camera_focus_fix_summary">For devices with autofocus problem</string>

    <string name="fb_boost_title">Boost on Draw</string>
    <string name="fb_boost_summary">Boost CPU on frame draw. Could increase battery drain while screen is on</string>

    <string name="qfp_wup_title">Wakeup on FP</string>
    <string name="qfp_wup_summary">Wakeup on FP immediately on finger detect before authentication. Reboot required!</string>

    <string name="hw_0d_disable_title">Disable HW Keys</string>
    <string name="hw_0d_disable_summary">Disable HW Keys</string>

    <string name="baikalos_hall_sensor_title">HALL Sensor</string>
    <string name="baikalos_hall_sensor_summary">Enable HALL Sensor</string>

    <string name="core_ctl_title">Enable Core Control</string>
    <string name="core_ctl_summary">Enable selective CPU core offlining for better power saving</string>

    <string name="input_boost_title">Input Boost</string>
    <string name="input_boost_summary">Enable input boost for better response</string>

    <string name="hp_detect_title">Disable HP detect</string>
    <string name="hp_detect_summary">Disable detection of headphones. For devices with broken USB-C port.</string>

    <!-- Kcal -->
    <string name="kcal_title">Display color</string>
    <string name="kcal_summary">Display color calibration using KCAL</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_contrast">Constrast</string>
    <string name="menu_reset">Reset</string>
    <string name="kcal_color_temp">Color temperature (K)</string>

    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>

    <string name="kcal_locked_title">Lock KCAL settings</string>
    <string name="kcal_locked_summary">Lock settings from system and other apps</string>

</resources>
